--- a/app/views/shared/_user_current_streak_card.html.erb
+++ b/app/views/shared/_user_current_streak_card.html.erb
@@ -12,26 +12,45 @@
     <%= streak %>
     <span class="text-base font-normal text-soft"><%= 'day'.pluralize(streak) %></span>
   </p>
-  <p class="mt-1 mb-4 text-soft text-sm">
+  <p class="mt-2 mb-4 text-soft text-sm">
     <% if streak.zero? %>
       No current streak recorded.
     <% elsif start_date == end_date %>
-      <%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %>
+      <div class="text-soft text-sm font-semibold inline-flex items-center gap-1">
+        <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+        <span class="whitespace-nowrap"><%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %></span>
+      </div>
     <% else %>
-      <%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %> &ndash; <%= pretty_date(end_date, month_format: :short, include_year: Date.current.year != end_date.year) %>
+      <div class="text-soft text-sm font-semibold inline-flex items-center gap-1">
+        <%= inline_svg_tag 'icons/calendar-filled.svg', class: 'size-3.5 shrink-0' %>
+        <span class="whitespace-nowrap"><%= pretty_date(start_date, month_format: :short, include_year: Date.current.year != start_date.year) %> &ndash; <%= pretty_date(end_date, month_format: :short, include_year: Date.current.year != end_date.year) %></span>
+      </div>
     <% end %>
   </p>
 
-  <%= render 'shared/streak_dots', user: user, week_start: team&.week_start, exclude_saturday: team&.exclude_saturday_from_streak?, exclude_sunday: team&.exclude_sunday_from_streak? %>
+  <%= render 'shared/streak_dots', user: user, team: team %>
+
   <% if user == current_user %>
-    <p class="mt-1 text-soft text-sm">
+    <p class="mt-2 text-soft text-sm">
       <% if end_date == Date.today %>
-        Run again tomorrow to advance your streak!
+        Run again tomorrow to extend your streak!
       <% elsif end_date == Date.yesterday %>
-        Log a run to advance your streak!
+        Log a run today to extend your streak!
       <% else %>
         Log a run to start your streak!
       <% end %>
     </p>
+  <% end %>
+
+  <% if team %>
+    <div class="mt-2">
+      <% if team.exclude_weekends_from_streak? %>
+        <p class="text-soft text-xs">Weekends won&#8217;t reset your streak for this team.</p>
+      <% elsif team.exclude_saturday_from_streak? %>
+        <p class="text-soft text-xs">Saturdays won&#8217;t reset your streak for this team.</p>
+      <% elsif team.exclude_sunday_from_streak? %>
+        <p class="text-soft text-xs">Sundays won&#8217;t reset your streak for this team.</p>
+      <% end %>
+    </div>
   <% end %>
 </div>
