--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,9 +8,9 @@
 
     <h1 class="heading"><%= @user.default_name %></h1>
     <% if @user.display_name.present? %>
-      <h2 class="my-1 text-lg text-soft"><%= @user.username %></h2>
+      <p class="mt-1 text-soft text-sm"><%= @user.username %></p>
     <% elsif @user == current_user %>
-      <p class="mt-1">
+      <p class="mt-1 text-sm">
         <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-200' %>
       </p>
     <% end %>
@@ -50,6 +50,7 @@
 
   <div id="infoTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'infoTab' ? '' : 'hidden' %>">
     <%= render 'user_info', user: @user %>
+    <%= render 'contact', user: @user %>
   </div>
 
   <div id="teamsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'teamsTab' ? '' : 'hidden' %>">
